<resources>
    <string name="app_name">Healthy lifestyle</string>
    <string name="heading">Healthy lifestyle</string>
    <string name="reg">Вход в учетную запись</string>
    <string name="buttonstart">Войти</string>
    <string name="buttonregistre">Зарегистрироваться</string>
    <string name="emailid">Email</string>
    <string name="password">Пароль</string>
    <string name="remember">Запомнить</string>
    <string name="name">Имя</string>
    <string name="name2">Фамилия</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="age">Возраст:</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="gender">Пол:</string>
    <string name="calculator">Калькуляторы</string>
    <string name="nutrition">Спорт и питание</string>
    <string name="recommendations">Советы ЗОЖ</string>
    <string name="water_balance">Водный баланс</string>
    <string name="imt">ИМТ</string>
    <string name="kbzy">КБЖУ</string>
    <string name="weight2">Вес:</string>
    <string name="height2">Рост:</string>
    <string name="calculate">Рассчитать</string>
    <string name="result">Результат</string>
    <string name="kg">кг</string>
    <string name="cm">см</string>
    <string name="eating">здоровое питание</string>
    <string name="physicalclasses">занятия физкультурой</string>
    <string name="gooddream">хороший сон</string>
    <string name="modeoftheday">режим дня</string>
    <string name="badhabits">отказ от вредных привычек</string>
    <string name="stress">устойчивость к стрессу</string>
    <string name="hardening">закаливание организма</string>
    <string name="personalhygiene">личная гигиена</string>
    <string name="intellectualdevelopment">интеллектуальное развитие</string>
    <string name="spiritualwellbeing">духовное самочувствие</string>
    <string name="x">Х</string>
    <string name="btn1">Здоровое питание\n\nЛюбая деятельность человека зависит от веществ и микроэлементов, поступающих в его организм вместе с пищей. Поэтому следует отказаться от фаст-фуда и другой вредной еды, переключив свое внимание на фрукты, овощи, злаки. Организуйте правильный режим питания.</string>
    <string name="btn2">Занятия физкультурой\n\nОбязательно делайте зарядку по утрам! Она придаст энергии и хорошего настроения на весь день. Выберите для себя подходящий вид спорта. Физическая активность незаменима при здоровом образе жизни. Занятия спортом сделают ваше тело стройным и красивым, а также укрепят иммунитет.</string>
    <string name="btn3">Хороший сон\n\nЕжедневно человек должен спать около 8 часов, причем ложиться лучше до полуночи — это наиболее благоприятное время для сна. Хорошо проветривайте комнату перед сном. Важной особенностью является комфорт и удобство спального места. Нельзя наедаться на ночь, помните, что последний прием пищи обязан быть не позднее, чем за 3 часа до сна.</string>
    <string name="btn4">Режим дня\n\nРаспоряжайтесь своим временем грамотно. Хорошо организованный режим дня – правильное чередование работы и отдыха. Составив режим, вы будете больше успевать сделать за день, избегая переутомления.</string>
    <string name="btn5">Отказ от вредных привычек\n\nАлкоголь, наркотики, курение – всё это наносит непоправимый вред организму. Эти вредные привычки влекут за собой болезни, мешают человеку развиваться как в трудовой, так и в творческой деятельности, вследствие чего, делают его социально неблагополучным и несчастным.</string>
    <string name="btn6">Устойчивость к стрессу\n\nСтарайтесь спокойней относиться к возникшим проблемам и неудачам. Запомните, что негативные эмоции приводят к болезням. Справиться со стрессами помогут занятия любимым делом, спорт или новые увлечения. Старайтесь контролировать свои эмоции и относитесь ко всему с добром и позитивом.</string>
    <string name="btn7">Закаливание организма\n\nЗакаливание – важная особенность здорового образа жизни, это профилактика простудных заболеваний и развитие устойчивости организма к негативным условиям среды. Известно, что закаленный человек в 8 раз реже простужается, чем незакаленный. Закаливаться можно снегом, солнцем, воздухом или водой, главное делать это с умом и в меру.</string>
    <string name="btn8">Личная гигиена\n\nКак говорится, чистота – залог здоровья, поэтому ежедневно приводите свое тело и одежду в порядок. Несоблюдение личной гигиены может быть поводом развития многих опасных болезней.</string>
    <string name="btn9">Интеллектуальное развитие\n\nУзнавая что-то новое, мы тренируем головной мозг, а значит, развиваем умственные способности, которые можно применить в различных жизненных ситуациях.</string>
    <string name="btn10">Духовное самочувствие\n\nОптимистичное настроение зачастую является главным компонентом успешной деятельности и любых начинаний. Важно уметь правильно определять свои жизненные цели и грамотно расставлять приоритеты.</string>
    <string name="activity">Тип \nактивности:</string>
    <string name="purpose">Цель:</string>
    <string name="sport">Физические упражнения</string>
    <string name="food">Информация о правильном питании и рецепты</string>

    <string name="nutrition_text_necessity">Основной объем потребляемых веществ составляют белки, жиры, углеводы, а также вода, из которой организм состоит на 2/3. Потеря всего 10% жидкости может привести к летальному исходу. Норма жидкости очень различна и варьирует от 1,5 до 3 литров в день. Немалую часть ее люди получают из обычной пищи: супы, чай, сочные фрукты. В жару, во время физических нагрузок, болезней, а также крупным людям, суммарно жидкости нужно потреблять не менее 2 литров. Стоит помнить, что избыточное количество воды оказывает повышенную нагрузку на почки, так что пить больше, чем необходимо, не следует.</string>
    <string name="nutrition_how_to_build_menu">Чтобы составить рацион правильного питания, нужно учитывать все свои особенности. Калорийность – это то количество энергии, которое образуется при расщеплении и переработке пищи. Она колеблется от 1800 до 3000 кКал в сутки, в зависимости от: возраста, образа жизни, скорости метаболизма. Если вы ведете активный образ жизни и много занимаетесь спортом, то ваше меню будет более калорийным за счет белковой пищи, чем у среднестатистического человека – для активного роста мышц и поддержания быстрого метаболизма. При сидячем образе жизни, напротив, нужно уменьшать долю углеводов и вредных жиров, чтобы не набрать лишний вес, так как потребляемые лишние калории не сжигаются.</string>
    <string name="menu_example">Примеры усредненного рациона питания на каждый день</string>
    <string name="menu_guide">Как правильно составить рацион ПП</string>
    <string name="healthy_nutrition_necessity">Необходимость правильного питания</string>
    <string name="sport_part1">Этап 1: ходьба на месте</string>
    <string name="sport_part2">Этап 2: суставная гимнастика</string>
    <string name="sport_part3">Этап 3: динамическая растяжка мышц</string>
    <string name="sport_part4">Этап 4: кардио-разогрев</string>
    <string name="sport_part5">Этап 5: восстановление дыхания</string>

    <string-array name="pol">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="active">
        <item>Малоподвижный</item>
        <item>Тренировки 1–3 раза в неделю</item>
        <item>Тренировки 3–5 раза в неделю</item>
        <item>Высокие нагрузки каждый день</item>
        <item>Экстремальные нагрузки</item>
    </string-array>

    <string-array name="ambition">
        <item>Сбросить вес</item>
        <item>Набрать мышечную массу</item>
        <item>Поддерживать вес</item>
    </string-array>

    <string-array name="sexes">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="activity_water_balance">
        <item>Легкие физические нагрузки</item>
        <item>Средние физические нагрузки</item>
        <item>Высокие физические нагрузки</item>
    </string-array>

    <string-array name="menu_type">
        <item>Мужчина</item>
        <item>Женщина</item>
        <item>Ребёнок</item>
    </string-array>
</resources>