<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/email"
            android:hint="@string/emailid"
            android:inputType="textEmailAddress"
            android:text=""
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/pass"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:text=""
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/name"
            android:hint="@string/name"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/surname"
            android:hint="@string/name2"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/ageInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/age"
            android:inputType="number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/heightInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/height"
            android:inputType="number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/weight"
            android:inputType="number"
            android:textSize="20sp" />
        
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sex_choice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:paddingVertical="4dp"
            android:entries="@array/sexes" />
    </LinearLayout>

</androidx.cardview.widget.CardView>