<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/email"
            android:hint="@string/emailid"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/texthint"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/pass"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/texthint"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.cardview.widget.CardView>